--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,12 +11,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.21",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "@types/socket.io": "^3.0.2",
     "dotenv": "^16.3.1",
-    "socket.io": "^4.7.2"
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0",
+    "socket.io": "^4.7.2",
+    "ts-node": "^10.9.1"
   }
 }
