--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -2,13 +2,13 @@
   "compilerOptions": {
     "target": "ES6",
     "module": "CommonJS",
-    "outDir": "./dist", // The directory where compiled JavaScript files will be placed
-    "rootDir": "./src", // The directory containing your TypeScript source files
+    "outDir": "./dist",
+    "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*.ts"], // Specify the files to include in the compilation
+  "include": ["src/**/*.ts", "env.d.ts"],
   "exclude": ["node_modules"]
 }
