--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
     "@types/socket.io": "^3.0.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
