--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/mongoose": "^5.11.97",
     "@types/socket.io": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.0",
