--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.9",
+    "@types/node": "^20.9.3",
     "@types/supertest": "^2.0.16",
     "jest": "^29.7.0",
     "supertest": "^6.3.3",
